--- a/interface/package.json
+++ b/interface/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.16.1",
     "copy-to-clipboard": "^3.0.8",
     "hoek": "^4.2.1",
+    "lodash": "^4.17.10",
     "material-ui": "^0.20.1",
     "moment": "^2.20.1",
     "prop-types": "^15.5.10",
@@ -26,8 +27,10 @@
     "react-syntax-highlighter": "^7.0.2",
     "redux": "^3.6.0",
     "redux-axios-middleware": "^4.0.0",
+    "redux-debounced": "^0.5.0",
     "redux-immutable-state-invariant": "^2.0.0",
     "redux-logger": "^3.0.6",
+    "redux-logic": "^0.15.0",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
     "remark-breaks": "^1.0.0",
