--- a/deploy/app/Dockerfile
+++ b/deploy/app/Dockerfile
@@ -1,19 +1,20 @@
-# FROM node:9.4 AS npm
-#
-# ENV APP_DIR /app
-#
-# RUN mkdir -p ${APP_DIR}
-# COPY ./interface/package.json ${APP_DIR}/
-# WORKDIR ${APP_DIR}
-# RUN npm install
-# COPY ./interface/ ${APP_DIR}/
-# RUN npm run build
+FROM node:9.4 AS npm
+
+ENV APP_DIR /app
+
+RUN mkdir -p ${APP_DIR}
+COPY ./interface/package.json ${APP_DIR}/
+WORKDIR ${APP_DIR}
+RUN npm install
+COPY ./interface/ ${APP_DIR}/
+RUN npm run build
 
 FROM nginx:alpine
 
 ENV APP_DIR /app
+ENV TEMPLATES_DIR  /templates
 ENV TZ=America/Sao_Paulo
-RUN mkdir ${APP_DIR}
+RUN mkdir -p ${APP_DIR} ${TPD_DIR}
 
 RUN apk add --no-cache python3 uwsgi uwsgi-python3 iputils
 
@@ -30,12 +31,11 @@ RUN apk add --no-cache --virtual build-dependencies \
 	&& pip3 install -r ${APP_DIR}/requirements.txt \
 	&& apk del build-dependencies
 
-COPY deploy/app/nginx.conf /etc/nginx/conf.d/default.conf
 COPY ./deploy/app/startup.sh /usr/bin/startup-uwsgi
+COPY deploy/app/nginx.conf /etc/nginx/conf.d/default.conf
 RUN chmod +x /usr/bin/startup-uwsgi
 COPY deploy/app/uwsgi.ini run.py ${APP_DIR}/
 COPY backend/ ${APP_DIR}/backend/
-# COPY --from=npm ${APP_DIR}/build ${APP_DIR}/
-COPY configs.json /root/configs.json
-
+COPY --from=npm ${APP_DIR}/build ${APP_DIR}/build
+#COPY configs.json /root/configs.json
 CMD nginx && startup-uwsgi
