--- a/deploy/app/nginx.conf
+++ b/deploy/app/nginx.conf
@@ -1,18 +1,24 @@
 server {
   listen        80;
   server_name   localhost;
-  root          /app;
+
+  location ~ ^/templates(?<tmpl>.+)\.(?<ext>jpg|png|svg)$ {
+    root /templates;
+    try_files     $tmpl.$ext 401;
+  }
 
   location / {
-    try_files   $uri /index.html;
+    root          /app/build;
+    try_files     $uri /index.html;
   }
 
   location /favicon.ico {
-    expires    max;
-    add_header Cache-Control public;
+    root        /app/build;
+    expires     max;
+    add_header  Cache-Control public;
   }
 
-  location ~ ^/(ui-api) {
+  location ~ ^/ui-api {
     include     uwsgi_params;
     uwsgi_pass  unix:/app/uwsgi.sock;
   }
