--- a/interface/.eslintrc
+++ b/interface/.eslintrc
@@ -5,5 +5,12 @@
       "node": true,
       "browser": true
     },
-    "extends": "airbnb"
+    "extends": "airbnb",
+    "settings": {
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": ["node_modules", "src/"]
+      }
+    }
+  }
 }
