--- a/interface/public/manifest.json
+++ b/interface/public/manifest.json
@@ -3,10 +3,25 @@
   "name": "IAT IFF",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
-    }
+    },
+    {
+      "src": "favicon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
   ],
   "start_url": "./index.html",
   "display": "standalone",
