--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,10 @@
+image:
+  name: python:3
+  entrypoint: ["/bin/bash"]
+
+
 test:
   script:
-    - apt-get install -y python3-dev python3 python3-pip
     - pip install -r requirements.txt
     - pip install -r dev_requirements.txt
     - nosetests -v
