--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,18 +8,37 @@ stages:
   - test
   - build
 
+code_quality:
+  image: docker:stable
+  variables:
+    DOCKER_DRIVER: overlay2
+  allow_failure: true
+  services:
+    - docker:stable-dind
+  script:
+    - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
+    - docker run
+        --env SOURCE_CODE="$PWD"
+        --volume "$PWD":/code
+        --volume /var/run/docker.sock:/var/run/docker.sock
+        "registry.gitlab.com/gitlab-org/security-products/codequality:$SP_VERSION" /code
+  artifacts:
+    paths: [gl-code-quality-report.json]
+
 test_backend:
   stage: test
   script:
     - pip install -r requirements.txt
     - pip install -r dev_requirements.txt
-    - nosetests -v
+    - nosetests -v --with-coverage --cover-erase --cover-package=backend
 
 build_images:
   stage: build
   image: docker:stable
   services:
    - docker:dind
+  only:
+    - master
   script:
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
     - docker pull $CONTAINER_IMAGE:latest || true
