fix send result issue

--- a/interface/package.json
+++ b/interface/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crawl-service",
+  "name": "iat-iff",
   "version": "0.1.0",
   "proxy": "http://localhost:5000/",
   "private": true,
