--- a/interface/package.json
+++ b/interface/package.json
@@ -10,32 +10,32 @@
     }
   },
   "dependencies": {
-    "axios": "^0.16.1",
-    "copy-to-clipboard": "^3.0.8",
+    "axios": "^0.18.0",
     "hoek": "^4.2.1",
     "lodash": "^4.17.10",
     "material-ui": "^0.20.1",
     "moment": "^2.20.1",
-    "prop-types": "^15.5.10",
+    "prop-types": "^15.6.2",
     "query-string": "^5.1.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-markdown": "^3.3.4",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "react-syntax-highlighter": "^7.0.2",
-    "redux": "^3.6.0",
+    "react": "^16.4.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-beautiful-dnd": "^9.0.2",
+    "react-dom": "^16.4.2",
+    "react-markdown": "^3.6.0",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.5",
+    "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
     "redux-debounced": "^0.5.0",
-    "redux-immutable-state-invariant": "^2.0.0",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
-    "redux-logic": "^0.15.0",
-    "redux-promise-middleware": "^4.3.0",
-    "redux-thunk": "^2.2.0",
-    "remark-breaks": "^1.0.0",
-    "styled-components": "^1.4.6",
-    "url-parse": "^1.2.0"
+    "redux-logic": "^1.0.2",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
+    "remark-breaks": "^1.0.1",
+    "styled-components": "^3.4.5"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -45,8 +45,6 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.2.1",
-    "react-addons-test-utils": "^15.5.1",
-    "react-scripts": "^1.1.4",
     "sinon": "^2.3.0"
   },
   "scripts": {
