--- a/deploy/app/nginx.conf
+++ b/deploy/app/nginx.conf
@@ -18,7 +18,7 @@ server {
     add_header  Cache-Control public;
   }
 
-  location ~ ^/ui-api {
+  location ~ ^/.*-api {
     include     uwsgi_params;
     uwsgi_pass  unix:/app/uwsgi.sock;
   }
