--- a/interface/package.json
+++ b/interface/package.json
@@ -21,11 +21,13 @@
     "react-addons-test-utils": "^15.6.2",
     "react-beautiful-dnd": "^9.0.2",
     "react-dom": "^16.4.2",
+    "react-json-view": "^1.19.1",
     "react-markdown": "^3.6.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
+    "recharts": "^1.3.1",
     "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
     "redux-debounced": "^0.5.0",
