fix key issue on results, add final info screen

--- a/templates/paty/manifest.json
+++ b/templates/paty/manifest.json
@@ -1,62 +1,1 @@
-{
-  "name": "IFF - IAT",
-  "description": "Test your gender bias",
-  "groups": {
-    "male": {
-      "name": "Male",
-      "items": [
-        {"type": "text", "value": "Ben"},
-        {"type": "text", "value": "Paul"},
-        {"type": "text", "value": "Daniel"},
-        {"type": "text", "value": "John"},
-        {"type": "text", "value": "Jeffrey"}
-      ]
-    },
-    "female": {
-      "name": "Female",
-      "items": [
-        {"type": "text", "value": "Rebecca"},
-        {"type": "text", "value": "Michelle"},
-        {"type": "text", "value": "Emily"},
-        {"type": "text", "value": "Julia"},
-        {"type": "text", "value": "Anna"}
-      ]
-    },
-    "neg": {
-      "name": "Arts",
-      "items": [
-        {"type": "text", "value": "Sculpture"},
-        {"type": "text", "value": "Drama"},
-        {"type": "text", "value": "Craft"},
-        {"type": "text", "value": "Painting"},
-        {"type": "text", "value": "Melody"}
-      ]
-    },
-    "pos": {
-      "name": "Computer Science",
-      "items": [
-        {"type": "text", "value": "Programming"},
-        {"type": "text", "value": "Technology"},
-        {"type": "text", "value": "Code"},
-        {"type": "text", "value": "Mathematics"},
-        {"type": "text", "value": "Eletronics"}
-      ]
-    }
-  },
-  "positive_groups": ["pos"],
-  "negative_groups": ["neg"],
-  "result_text": "Your data suggest a $LEVEL automatic association for $WINNER with Computer Science and $LOSER with Arts.",
-  "versions": [
-    {
-      "tasks": [
-        [["male"], ["female"]],
-        [["pos"], ["neg"]],
-        [["male", "pos"], ["female", "neg"]],
-        [["male", "pos"], ["female", "neg"]],
-        [["female"], ["male"]],
-        [["female", "pos"], ["male", "neg"]],
-        [["female", "pos"], ["male", "neg"]]
-      ]
-    }
-  ]
-}
+{"name": "Test Me", "negative_groups": ["neg"], "groups": {"male": {"name": "Male", "items": [{"type": "text", "value": "Ben"}, {"type": "text", "value": "Paul"}, {"type": "text", "value": "Daniel"}, {"type": "text", "value": "John"}, {"type": "text", "value": "Jeffrey"}]}, "pos": {"name": "Computer Science", "items": [{"type": "text", "value": "Programming"}, {"type": "text", "value": "Technology"}, {"type": "text", "value": "Code"}, {"type": "text", "value": "Mathematics"}, {"type": "text", "value": "Eletronics"}]}, "female": {"name": "Female", "items": [{"type": "text", "value": "Rebecca"}, {"type": "text", "value": "Michelle"}, {"type": "text", "value": "Emily"}, {"type": "text", "value": "Julia"}, {"type": "text", "value": "OIEEEEEEEEEEEEEEEE"}]}, "neg": {"name": "Arts", "items": [{"type": "text", "value": "Sculpture"}, {"type": "text", "value": "Drama"}, {"type": "text", "value": "Craft"}, {"type": "text", "value": "Painting"}, {"type": "text", "value": "Melody"}]}}, "versions": [{"tasks": [[["male"], ["female"]], [["pos"], ["neg"]], [["male", "pos"], ["female", "neg"]], [["male", "pos"], ["female", "neg"]], [["female"], ["male"]], [["female", "pos"], ["male", "neg"]]]}], "description": "Test your gender bias", "result_text": "Your data suggest a $LEVEL automatic association for $WINNER with Computer Science and $LOSER with Arts.", "positive_groups": ["pos"]}
