--- a/templates/fantasy/manifest.json
+++ b/templates/fantasy/manifest.json
@@ -1,6 +1,12 @@
 {
   "name": "Fantasy Bias",
   "description": "Test your fantasy bias",
+  "file_version": 1,
+  "popup_messages": {
+    "before_result": "before_result",
+    "after_result": "after_result"
+  },
+  "can_skip_questions": true,
   "groups": {
     "sw": {
       "name": "Star Wars",
