--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ build_images:
   image: docker:stable
   services:
    - docker:dind
+   - alpine/git
   only:
     - master
   script:
@@ -34,6 +35,7 @@ build_release_images:
   image: docker:stable
   services:
    - docker:dind
+   - alpine/git
   only:
     - tags
   script:
