Add test list on app root, serve over htttps

--- a/deploy/app/nginx.conf
+++ b/deploy/app/nginx.conf
@@ -1,6 +1,17 @@
 server {
-  listen        80;
-  server_name   localhost;
+  listen      80;
+  listen      [::]:80;
+  server_name unconsciousbiasawareness.com;
+
+  return 301 https://$server_name$request_uri;
+}
+
+server {
+  listen              443 ssl
+  listen              [::]:443 ssl
+  server_name         unconsciousbiasawareness.com;
+  ssl_certificate     /ssl/cert.crt;
+  ssl_certificate_key /ssl/cert.key;
 
   location ~ ^/templates(?<tmpl>.+)\.(?<ext>jpg|png|svg)$ {
     root /templates;
