fix issue with nginx config

--- a/deploy/app/nginx.conf
+++ b/deploy/app/nginx.conf
@@ -7,8 +7,8 @@ server {
 }
 
 server {
-  listen              443 ssl
-  listen              [::]:443 ssl
+  listen              443 ssl;
+  listen              [::]:443 ssl;
   server_name         unconsciousbiasawareness.com;
   ssl_certificate     /ssl/cert.crt;
   ssl_certificate_key /ssl/cert.key;
